--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,14 @@
             <version>5.0.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
+            <scope>provided</scope>
+        </dependency>
+
+
 
     </dependencies>
 
